# sipflix

./: .gitignore  README.md  app.py  bun.lockb  package.json
backend/: main.py  pom.xml  pyproject.toml
backend/src/main/java/com/oswego/sipflix/: SipflixApplication.java
backend/src/main/resources/: application.properties
backend/src/main/resources/static/_app/: version.json
backend/src/main/resources/static/_app/immutable/chunks/: disclose-version.0nJNXell.js  events.CL4lJWCx.js  index-client.BzJCu_CY.js  legacy.CC3T_ZGA.js  render.JW_cZ7Yk.js  runtime.Kh19ytKz.js
backend/src/main/resources/static/_app/immutable/entry/: app.Dt8n3IAw.js  start.CAbWq8Kn.js
backend/src/main/resources/static/_app/immutable/nodes/: 0.BKQ4xgDV.js
backend/src/test/java/com/oswego/sipflix/: SipflixApplicationTests.java
frontend/: bun.lockb  package.json  svelte.config.js  tailwind.config.js
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/prerendered/pages/: index.html
frontend/.svelte-kit/output/server/: manifest-full.js  manifest.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/chunks/: internal.js
frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js
frontend/src/: app.css
frontend/src/lib/: Loading.svelte  ModeSelect.svelte  Search.svelte  Thumbnail.svelte  movieselection.svelte  store.ts
frontend/src/routes/: +layout.svelte  +page.svelte
(+4 files in other folders)
