[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["will-s-stone <will@williamstone.me>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
youtube-transcript-api = "^0.6.3"
flask = "^3.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
